# LocalTranslate

./: README.md  index.html  package-lock.json  package.json  quick.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx  quick.css  quick.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: history.rs  lib.rs  md.rs  quick.rs  translate.rs
src/components/: FileModal.tsx  HistoryPanel.tsx  ModelsModal.tsx  SettingsModal.tsx  Toasts.tsx  TopBar.tsx  TranslatePanel.tsx
src/lib/: backend.ts  detect.ts  docfile.ts  i18n.ts  langs.ts  types.ts
src/lib/__tests__/: detect.test.ts  docfile.test.ts  i18n.test.ts  langs.test.ts
src/state/: store.ts  ui.ts
