[package]
name = "localtranslate"
version = "0.3.0"
description = "LocalTranslate — tradutor offline (pt-BR · es · en) 100% local"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalTranslate"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localtranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Histórico de traduções: um SQLite único em app_data.
rusqlite = { version = "0.32", features = ["bundled"] }
# Tradução offline (Marian/OPUS-MT rodando no candle, CPU — sem sidecar/porta).
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
sha2 = "0.10"
# Download dos bundles de modelo (release v1 do LocalZIM-models), com sha256.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
# Modelos são pesados em CPU; otimização agressiva ajuda a decodificação.
opt-level = 3
lto = true
